--- a/css/styles.css
+++ b/css/styles.css
@@ -620,6 +620,24 @@ h5 {
     align-items: center;
 }
 
+/* Thank You */
+.thank-you {
+    max-width: 800px;
+}
+
+.thank-you__social a {
+    color: var(--secondary);
+    transition: color .3s ease-out;
+}
+
+.thank-you__social a:hover {
+    color: #fff;
+}
+
+.thank-you__button {
+    text-align: end;
+    margin-top: 3rem;
+}
 
 
 
